<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_message">暂时还没数据</string>

    <string name="error_message">网络错误,请稍后重试</string>

    <string name="homepage_part1_1">三会一课</string>
    <string name="homepage_part1_2">党日活动</string>
    <string name="homepage_part1_3">在线答题</string>
    <string name="homepage_part1_4">工作任务</string>
    <string name="homepage_part2_1">每日一题</string>
    <string name="homepage_part2_2">在新的历史条件下，我们党面临着执政，改革开放，（     ）外部环境“四大考验”</string>
    <string name="homepage_part3_2">  二十四字社会主义核心价值观出自《关于培育和践行社会主义核心价值观的意见》，其主要内容为富强、民主、文明、和谐，自由、平等、公正、法治， 爱国、敬业、诚信、友善。2014年2月12日，《人民日报》登二十四字“社会主义核心价值观”。</string>
    <string name="homepage_part3_1">每日一课</string>
    <string name="more">更多</string>
    <string name="kaishidati">开始答题</string>

    <string name="homepage_bottom1">首页</string>
    <string name="homepage_bottom2">教育</string>
    <string name="homepage_bottom3">服务</string>
    <string name="homepage_bottom4">我的</string>

    <string name="search">搜索</string>

    <string name="service_text1_1">应急管理部有关负责人就《地方党政领导等等等</string>
    <string name="service_text1_sj">2018-5-24</string>
    <string name="service_help">申请帮扶</string>
    <string name="service_text2">《专业技术类公务员管理规定（试行）》图解</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="message_text1">为了响应学校开展特色党日的号召,加强党员的党性修养,推进支部建设,我支部计划开展紧紧围绕“强组织、增活力...</string>
<string name="message_queren">确认提醒</string>

</resources>
