<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    android:orientation="horizontal"

    android:gravity="center_vertical"
    >



   <LinearLayout
       android:layout_marginTop="2dp"
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:id="@+id/id_home_bottom_ly1"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:layout_marginBottom="1.5dp"
       android:orientation="vertical">

      <ImageView
          android:id="@+id/id_home_bottom_img1"
          android:layout_width="23dp"
          android:layout_height="23dp"
          android:layout_marginTop="1.9dp"

          android:gravity="center_vertical"
          android:src="@mipmap/icon_bottom1" />

      <TextView
          android:layout_marginTop="5dp"
          android:id="@+id/id_home_bottom_tx1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal|center_vertical"

          android:text="@string/homepage_bottom1"

          android:textColor="@color/dj_textcolors"
          android:textSize="11sp" />
   </LinearLayout>


   <LinearLayout
       android:layout_marginTop="2dp"
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:id="@+id/id_home_bottom_ly2"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:layout_marginBottom="1.5dp"
       android:orientation="vertical">

      <ImageView
          android:id="@+id/id_home_bottom_img2"
          android:layout_width="23dp"
          android:layout_height="23dp"
          android:layout_marginTop="1.9dp"


          android:gravity="center_vertical"
          android:src="@mipmap/icon_bottom2" />

      <TextView
          android:layout_marginTop="5dp"
          android:id="@+id/id_home_bottom_tx2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal|center_vertical"

          android:text="@string/homepage_bottom2"
          android:textColor="@color/dj_textcolors"
          android:textSize="11sp" />
   </LinearLayout>

   <LinearLayout
       android:layout_marginTop="2dp"
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:id="@+id/id_home_bottom_ly3"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:layout_marginBottom="1.5dp"
       android:orientation="vertical">

      <ImageView
          android:layout_marginTop="1.9dp"
          android:id="@+id/id_home_bottom_img3"
          android:layout_width="23dp"
          android:layout_height="23dp"


          android:gravity="center_vertical"
          android:src="@mipmap/icon_bottom3" />

      <TextView
          android:layout_marginTop="5dp"
          android:id="@+id/id_home_bottom_tx3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal|center_vertical"

          android:text="@string/homepage_bottom3"
          android:textColor="@color/dj_textcolors"
          android:textSize="11sp" />
   </LinearLayout>

   <LinearLayout
       android:layout_marginTop="2dp"
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:id="@+id/id_home_bottom_ly4"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:layout_marginBottom="1.5dp"
       android:orientation="vertical">

      <ImageView
          android:layout_marginTop="1.9dp"
          android:id="@+id/id_home_bottom_img4"
          android:layout_width="23dp"
          android:layout_height="23dp"


          android:gravity="center_vertical"
          android:src="@mipmap/icon_bottom4" />

      <TextView
          android:layout_marginTop="5dp"
          android:id="@+id/id_home_bottom_tx4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal|center_vertical"

          android:text="@string/homepage_bottom4"
          android:textColor="@color/dj_textcolors"
          android:textSize="11sp" />
   </LinearLayout>
</LinearLayout>